# doe-calculator

./: Alaric.json  Cargo.toml  MEMORY.md  README.md  muster.md  translate_character_sheet.py
openspec/changes/: print-character-sheet-markdown.md
openspec/changes/print-character-sheet-markdown/: tasks.md
openspec/changes/translate-character-sheet/: design.md  proposal.md  tasks.md
src/: attributes.rs  character.rs  gear.rs  main.rs  notes.rs  profession.rs  skill.rs  spell.rs  traits.rs  weapon.rs
src/interactive/: mod.rs  modify_lists.rs
